// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultList renders correctly 1`] = `
Array [
  <form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui segments"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="field"
        >
          <div
            className="ui fluid action input"
          >
            <input
              name="title"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search..."
              type="text"
              value=""
            />
            <button
              className="ui disabled button"
              disabled={true}
              onClick={[Function]}
              tabIndex={-1}
            >
              Search
            </button>
          </div>
        </div>
      </div>
      <div
        className="ui basic secondary segment"
      >
        <div
          className="inline fields"
        >
          <label>
            Play Style
          </label>
          <div
            className="field"
          >
            <div
              className="ui checked radio checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={true}
                className="hidden"
                name="playStyle"
                readOnly={true}
                tabIndex={0}
                type="radio"
                value="SP"
              />
              <label>
                SP
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="playStyle"
                readOnly={true}
                tabIndex={0}
                type="radio"
                value="DP"
              />
              <label>
                DP
              </label>
            </div>
          </div>
        </div>
        <div
          className="inline fields"
        >
          <label>
            Difficulty
          </label>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                NORMAL
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                HYPER
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ANOTHER
              </label>
            </div>
          </div>
        </div>
        <div
          className="inline fields"
        >
          <label>
            Level
          </label>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆1
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆2
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆3
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆4
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆5
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆6
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆7
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆8
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆9
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆10
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆11
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆12
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    className="ui divider"
  />,
  <table
    className="ui celled selectable unstackable table"
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className=""
          style={
            Object {
              "padding": "0px",
            }
          }
        />
        <th
          className="center aligned one wide"
        >
          Level
        </th>
        <th
          className="center aligned four wide"
        >
          Title
        </th>
        <th
          className="center aligned two wide"
        >
          Clear
        </th>
        <th
          className="center aligned three wide"
        >
          DJ Level
        </th>
        <th
          className="center aligned one wide"
        >
          Score
        </th>
        <th
          className="six wide"
        >
          Rate
        </th>
        <th
          className="center aligned one wide"
        >
          BP
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    />
  </table>,
]
`;

exports[`ResultList renders correctly if there are errors 1`] = `
Array [
  <form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui segments"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="field"
        >
          <div
            className="ui fluid action input"
          >
            <input
              name="title"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search..."
              type="text"
              value=""
            />
            <button
              className="ui disabled button"
              disabled={true}
              onClick={[Function]}
              tabIndex={-1}
            >
              Search
            </button>
          </div>
        </div>
      </div>
      <div
        className="ui basic secondary segment"
      >
        <div
          className="inline fields"
        >
          <label>
            Play Style
          </label>
          <div
            className="field"
          >
            <div
              className="ui checked radio checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={true}
                className="hidden"
                name="playStyle"
                readOnly={true}
                tabIndex={0}
                type="radio"
                value="SP"
              />
              <label>
                SP
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="playStyle"
                readOnly={true}
                tabIndex={0}
                type="radio"
                value="DP"
              />
              <label>
                DP
              </label>
            </div>
          </div>
        </div>
        <div
          className="inline fields"
        >
          <label>
            Difficulty
          </label>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                NORMAL
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                HYPER
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ANOTHER
              </label>
            </div>
          </div>
        </div>
        <div
          className="inline fields"
        >
          <label>
            Level
          </label>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆1
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆2
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆3
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆4
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆5
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆6
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆7
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆8
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆9
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆10
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆11
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆12
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    className="ui divider"
  />,
  <div
    style={
      Object {
        "alignItems": "center",
        "background": "#fff",
        "color": "#000",
        "display": "flex",
        "flexDirection": "column",
        "fontFamily": "-apple-system, BlinkMacSystemFont, Roboto, \\"Segoe UI\\", \\"Fira Sans\\", Avenir, \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
        "height": "100vh",
        "justifyContent": "center",
        "textAlign": "center",
      }
    }
  >
    <div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": "body { margin: 0 }",
          }
        }
      />
      <h1
        style={
          Object {
            "borderRight": "1px solid rgba(0, 0, 0,.3)",
            "display": "inline-block",
            "fontSize": "24px",
            "fontWeight": 500,
            "margin": 0,
            "marginRight": "20px",
            "padding": "10px 23px 10px 0",
            "verticalAlign": "top",
          }
        }
      >
        404
      </h1>
      <div
        style={
          Object {
            "display": "inline-block",
            "height": "49px",
            "lineHeight": "49px",
            "textAlign": "left",
            "verticalAlign": "middle",
          }
        }
      >
        <h2
          style={
            Object {
              "fontSize": "14px",
              "fontWeight": "normal",
              "lineHeight": "inherit",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          This page could not be found
          .
        </h2>
      </div>
    </div>
  </div>,
]
`;

exports[`ResultList renders correctly when loading 1`] = `
Array [
  <form
    className="ui form"
    onSubmit={[Function]}
  >
    <div
      className="ui segments"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="field"
        >
          <div
            className="ui fluid action input"
          >
            <input
              name="title"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Search..."
              type="text"
              value=""
            />
            <button
              className="ui disabled button"
              disabled={true}
              onClick={[Function]}
              tabIndex={-1}
            >
              Search
            </button>
          </div>
        </div>
      </div>
      <div
        className="ui basic secondary segment"
      >
        <div
          className="inline fields"
        >
          <label>
            Play Style
          </label>
          <div
            className="field"
          >
            <div
              className="ui checked radio checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={true}
                className="hidden"
                name="playStyle"
                readOnly={true}
                tabIndex={0}
                type="radio"
                value="SP"
              />
              <label>
                SP
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="playStyle"
                readOnly={true}
                tabIndex={0}
                type="radio"
                value="DP"
              />
              <label>
                DP
              </label>
            </div>
          </div>
        </div>
        <div
          className="inline fields"
        >
          <label>
            Difficulty
          </label>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                NORMAL
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                HYPER
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="difficulties"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ANOTHER
              </label>
            </div>
          </div>
        </div>
        <div
          className="inline fields"
        >
          <label>
            Level
          </label>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆1
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆2
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆3
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆4
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆5
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆6
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆7
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆8
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆9
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆10
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆11
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui checkbox"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                name="levels"
                readOnly={true}
                tabIndex={0}
                type="checkbox"
              />
              <label>
                ☆12
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
  <div
    className="ui divider"
  />,
  "loading",
]
`;
